temporarily fixed the overflow of the hash password

--- a/FourAPIs/Outputs/ostyle.css
+++ b/FourAPIs/Outputs/ostyle.css
@@ -55,6 +55,7 @@ h1:last-of-type {
 
 .box p {
   color: var(--grayishBlue);
+  overflow-x: scroll;
 }
 
 .box {
